--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pydantic==2.5.1
 pydantic_core==2.14.3
 pymongo==4.6.0
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 pytz==2024.1
 requests==2.31.0
 six==1.16.0
