--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
       {
         "src": "main.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": {
+          "includeFiles": ["requirements.txt"]
+        }
       }
     ],
     "routes": [
@@ -13,3 +16,4 @@
       }
     ]
   }
+  
