--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
     "builds": [
       {
         "src": "main.py",
-        "use": "@vercel/python",
-        "config": {
-          "includeFiles": ["requirements.txt"]
-        }
+        "use": "@vercel/python"
       }
     ],
     "routes": [
