--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
-    "version": 2,
     "builds": [
       {
         "src": "main.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": {
+          "runtime": "python3.12"
+        }
       }
     ],
     "routes": [
@@ -13,4 +15,3 @@
       }
     ]
   }
-  
