--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,20 @@ email-validator==2.1.0.post1
 fastapi==0.104.1
 h11==0.14.0
 idna==3.4
+numpy==1.26.4
 pandas==2.2.1
 pydantic==2.5.1
+pydantic_core==2.14.3
 pymongo==4.6.0
+python-dateutil==2.8.2
 python-dotenv==1.0.1
+pytz==2024.1
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.8.0
+tzdata==2024.1
 urllib3==2.2.1
 uvicorn==0.24.0.post1
+XlsxWriter==3.2.0
